fixed replayability, and tab resizing issue on safari

--- a/src/view/styles/gameSection.css
+++ b/src/view/styles/gameSection.css
@@ -56,7 +56,7 @@
 
 .pickedViewer {
   width: 100%;
-  min-height: 800px;
+  min-height: 970px;
   margin-left: auto;
   margin-right: auto;
   background-color: whitesmoke;
